# roguelike-rust-macroquad-noname

./: .gitignore  Cargo.toml  README.md  index.html  roadmap.md
assets/: config.json
data/: weapons.json
libs/rust-nonamerl-core/: Cargo.toml
libs/rust-nonamerl-core/src/: camera.rs  dimension.rs  direction.rs  grid.rs  lib.rs  linearize.rs  render.rs  scenes.rs  sprite.rs  vector.rs
libs/rust-nonamerl-core/src/entity/: activator.rs  entity.rs  mod.rs  property.rs  world.rs
libs/rust-nonamerl-core/src/entity/action/: attack.rs  equip.rs  mod.rs  move_entity.rs  queue.rs
libs/rust-nonamerl-core/src/entity/item/: mod.rs
libs/rust-nonamerl-core/src/map/: builder.rs  commands.rs  fov.rs  mod.rs  noise_builder.rs  random_walk_builder.rs  room.rs  room_builder.rs  tile.rs
src/: actions.rs  engine.rs  main.rs  map.rs  npc.rs  player.rs  random_walk_builder.rs  room_builder.rs
src/engine/: core.rs  fov.rs  items.rs  map.rs  renderer.rs  texture_manager.rs  viewport.rs
src/engine/core/: camera.rs  direction.rs  entity.rs  mod.rs  world.rs
src/engine/level/: corridor.rs  mod.rs
src/engine/map/: bresenham.rs  builder.rs  cell.rs  mod.rs  renderer.rs  tile.rs
src/scenes/: end_scene.rs  events.rs  fsm.rs  game_scene.rs  intro_scene.rs  mod.rs
src/ui/: buttons.rs  label.rs  mod.rs
