[package]
name = "rust-noname-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
noise = "0.8.2"
zorder = "0.1.0"

serde = {version="1.0.171",features=["derive"]}
serde_json = "1.0.100"
rand = "0.8.5"
egui = "0.21.0"
egui-macroquad = "0.15.0"
nefsm = "0.1.3"
delegate = "0.10.0"



