[package]
name = "rust-nonamerl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morton-encoding = "2.0.1"
num-traits = "0.2.16"
slotmap = { version = "1.0.6", features = ["serde"] }
macroquad = "0.4.2"
noise = "0.8.2"
rand = "0.8.5"
